Pictures work good fixed bug on collapse, cancel or view appointments

--- a/static/main_style.css
+++ b/static/main_style.css
@@ -8,6 +8,12 @@ body, html {
 }
 
 
+
+#picture_modal {
+  object-fit: contain;
+}
+
+
 /*Carousel for pictures*/
 .img-responsive {
   max-height: 600px ! important;
